--- a/IDServerandASPIdentity/Views/Account/Login.cshtml
+++ b/IDServerandASPIdentity/Views/Account/Login.cshtml
@@ -1,92 +1,92 @@
-﻿@model LoginViewModel
+﻿@using IDServer.Models
+@model LoginViewModel
 
 <div class="login-page">
-    <div class="page-header">
-        <h1>Login</h1>
-    </div>
-
-    @Html.Partial("_ValidationSummary")
-
-    <div class="row">
-
+    <section class="login-section">
+        <div class="login-logo">
+            @Html.Partial("_ValidationSummary")
+            <img src="~/images/logo.png" />
+        </div>
+        <div class="login-welcome-text">
+            Welcome to Publisher Portal <br>
+            <span>Publisher Portal</span>
+        </div>
         @if (Model.EnableLocalLogin)
-        {
-            <div class="col-sm-6">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">Local Login</h3>
-                    </div>
-                    <div class="panel-body">
-
-                        <form asp-route="Login">
-                            <input type="hidden" asp-for="ReturnUrl" />
-
-                            <fieldset>
-                                <div class="form-group">
-                                    <label asp-for="Username"></label>
-                                    <input class="form-control" placeholder="Username" asp-for="Username" autofocus>
-                                </div>
-                                <div class="form-group">
-                                    <label asp-for="Password"></label>
-                                    <input type="password" class="form-control" placeholder="Password" asp-for="Password" autocomplete="off">
-                                </div>
-                                @if (Model.AllowRememberLogin)
-                                {
-                                    <div class="form-group login-remember">
-                                        <label asp-for="RememberLogin">
-                                            <input asp-for="RememberLogin">
-                                            <strong>Remember My Login</strong>
-                                        </label>
-                                    </div>
-                                }
-                                <!--
-                                <div>
-                                    <p>The default users are alice/bob, password: Pass123$</p>
-                                </div>
-                                -->
-                                <div class="form-group">
-                                    <button class="btn btn-primary" name="button" value="login">Login</button>
-                                    <button class="btn btn-default" name="button" value="cancel">Cancel</button>
-                                </div>
-                            </fieldset>
-                        </form>
+    {
+        <div class="login-form">
+            <form asp-route="Login">
+                <input type="hidden" asp-for="ReturnUrl" />
+                <div class="form-group">
+                    <div class="input-group">
+                        <div class="input-group-addon"><i class="glyphicon glyphicon-user"></i></div>
+                        <input type="text" class="form-control" placeholder="Username" asp-for="Username" autofocus>
                     </div>
                 </div>
-            </div>
+                <div class="form-group">
+                    <div class="input-group">
+                        <div class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></div>
+                        <input type="password" class="form-control" placeholder="Password" asp-for="Password" autocomplete="off">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <p>
+                        <a asp-controller="User"
+                           asp-action="ForgotPassword" asp-route-tenantId="0000-0000-0000" asp-route-returnUrl="@Model.ReturnUrl">Forgot Your Password?</a>
+                    </p>
+                </div>
+                @if (Model.AllowRememberLogin)
+            {
+                <div class="form-group login-remember">
+                    <label asp-for="RememberLogin">
+                        <input asp-for="RememberLogin">
+                        <strong>Remember My Login</strong>
+                    </label>
+                </div>
         }
+                <div class="form-group text-center">
+                    <button class="btn btn-primary" name="button" value="login">Login</button>
+                    <button class="btn btn-default" name="button" value="cancel">Cancel</button>
+                </div>
 
+            </form>
+
+        </div>
+        
+}
         @if (Model.VisibleExternalProviders.Any())
-        {
-            <div class="col-md-6 col-sm-6 external-providers">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">External Login</h3>
-                    </div>
-                    <div class="panel-body">
-                        <ul class="list-inline">
-                            @foreach (var provider in Model.VisibleExternalProviders)
-                            {
-                                <li>
-                                    <a class="btn btn-default"
-                                       asp-action="ExternalLogin"
-                                       asp-route-provider="@provider.AuthenticationScheme"
-                                       asp-route-returnUrl="@Model.ReturnUrl">
-                                        @provider.DisplayName
-                                    </a>
-                                </li>
-                            }
-                        </ul>
-                    </div>
+    {
+        <div class="col-md-6 col-sm-6 external-providers">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">External Login</h3>
+                </div>
+                <div class="panel-body">
+                    <ul class="list-inline">
+                        @foreach (var provider in Model.VisibleExternalProviders)
+                    {
+                        <li>
+                            <a class="btn btn-default"
+                               asp-action="ExternalLogin"
+                               asp-route-provider="@provider.AuthenticationScheme"
+                               asp-route-returnUrl="@Model.ReturnUrl">
+                                @provider.DisplayName
+                            </a>
+                        </li>
+                }
+                    </ul>
                 </div>
             </div>
-        }
-
+        </div>
+}
         @if (!Model.EnableLocalLogin && !Model.VisibleExternalProviders.Any())
-        {
-            <div class="alert alert-warning">
-                <strong>Invalid login request</strong>
-                There are no login schemes configured for this client.
-            </div>
-        }
-    </div>
+    {
+        <div class="alert alert-warning">
+            <strong>Invalid login request</strong>
+            There are no login schemes configured for this client.
+        </div>
+}
+    </section>
+</div>
+<div class="login-footer">
+    Copyright © 2018 eWorkplace Apps. All Rights Reserved.
 </div>
