--- a/IDServerandASPIdentity/Views/Shared/_Layout.cshtml
+++ b/IDServerandASPIdentity/Views/Shared/_Layout.cshtml
@@ -19,24 +19,24 @@
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a href="~/">
-                    <span class="navbar-brand">
-                        <img src="~/icon.png" class="icon-banner">
-                        IdentityServer4
-                    </span>
-                </a>
-            </div>
-
-            @if (!string.IsNullOrWhiteSpace(name))
+    <div class="wrapper">
+        <div class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a href="~/">
+                        <span class="navbar-brand">
+                            <img src="~/icon.png" class="icon-banner">
+                            IdentityServer4
+                        </span>
+                    </a>
+                </div>
+                @if (!string.IsNullOrWhiteSpace(name))
             {
                 <ul class="nav navbar-nav">
                     <li class="dropdown">
@@ -46,14 +46,15 @@
                         </ul>
                     </li>
                 </ul>
-            }
+        }
+            </div>
         </div>
+        <div class="container body-content height100p">
+            @RenderBody()
+        </div>
+        
     </div>
-
-    <div class="container body-content">
-        @RenderBody()
-    </div>
-
+    
     <script src="~/lib/jquery/jquery.js"></script>
     <script src="~/lib/bootstrap/js/bootstrap.js"></script>
     @RenderSection("scripts", required: false)
