--- a/IDServerandASPIdentity/wwwroot/css/site.css
+++ b/IDServerandASPIdentity/wwwroot/css/site.css
@@ -80,3 +80,72 @@
 .grants .grant li:last-child:after {
   content: '';
 }
+/* Added css for login page*/
+html, body {
+  height: 100%;
+}
+
+body {
+margin-top:0;
+}
+
+.wrapper, .height100p {
+  height:100%;
+}
+.login-page {
+  padding-top: calc(50% - 418px);
+}
+
+.login-section {
+  max-width: 300px;
+  background: #fff;
+  padding: 15px;
+  border-radius: 5px;
+  margin: auto;
+  box-shadow: 0px 1px 12px #dad5d5;
+}
+
+.form-control {
+  border: 1px solid #eaeaea;
+  box-shadow: none;
+}
+
+.input-group-addon {
+  border-color: #eaeaea;
+}
+
+.btn-primary {
+  background-color: #219dde;
+  border-color: #219dde;
+}
+
+
+
+.login-logo {
+  text-align: center;
+  font-size: 28px;
+  color: orange;
+  margin-bottom: 10px;
+}
+
+  .login-logo img {
+    max-width: 100%;
+  }
+
+
+.login-welcome-text {
+  text-align: center;
+  margin-bottom: 20px;
+  font-weight: bold;
+}
+
+  .login-welcome-text span {
+    font-weight: bold;
+    color: #000;
+  }
+
+.login-footer {
+  text-align: center;
+  font-size: 12px;
+  margin-top: -40px;
+}
