--- a/IDServerandASPIdentity/Views/Account/Login.cshtml
+++ b/IDServerandASPIdentity/Views/Account/Login.cshtml
@@ -8,7 +8,7 @@
             <img src="~/images/logo.png" />
         </div>
         <div class="login-welcome-text">
-            Welcome to Publisher Portal <br>
+            Welcome to eWorkplace Apps <br>
             <span>Publisher Portal</span>
         </div>
         @if (Model.EnableLocalLogin)
@@ -34,7 +34,7 @@
                            asp-action="ForgotPassword" asp-route-tenantId="0000-0000-0000" asp-route-returnUrl="@Model.ReturnUrl">Forgot Your Password?</a>
                     </p>
                 </div>
-                @if (Model.AllowRememberLogin)
+                @*@if (Model.AllowRememberLogin)
             {
                 <div class="form-group login-remember">
                     <label asp-for="RememberLogin">
@@ -42,10 +42,13 @@
                         <strong>Remember My Login</strong>
                     </label>
                 </div>
-        }
+        }*@
                 <div class="form-group text-center">
                     <button class="btn btn-primary" name="button" value="login">Login</button>
                     <button class="btn btn-default" name="button" value="cancel">Cancel</button>
+                </div>
+                <div class="login-footer">
+                    Copyright © 2018 eWorkplace Apps. All Rights Reserved.
                 </div>
 
             </form>
@@ -86,7 +89,4 @@
         </div>
 }
     </section>
-</div>
-<div class="login-footer">
-    Copyright © 2018 eWorkplace Apps. All Rights Reserved.
 </div>
