--- a/IDServerandASPIdentity/wwwroot/css/site.css
+++ b/IDServerandASPIdentity/wwwroot/css/site.css
@@ -86,18 +86,32 @@ html, body {
 }
 
 body {
-margin-top:0;
+  margin-top: 0;
+  background: #f9f9f9;
 }
 
-.wrapper, .height100p {
-  height:100%;
+.alert {
+  padding: 5px 10px;
+  margin-bottom: 4px;
+  text-align: left;
+  font-size: 12px;
 }
+
+  .alert ul {
+padding:0;
+margin:0;
+list-style:none;
+  }
+
+  .wrapper, .height100p {
+    height: 100%;
+  }
 .login-page {
   padding-top: calc(50% - 418px);
 }
 
 .login-section {
-  max-width: 300px;
+  max-width: 340px;
   background: #fff;
   padding: 15px;
   border-radius: 5px;
@@ -123,7 +137,6 @@ margin-top:0;
 
 .login-logo {
   text-align: center;
-  font-size: 28px;
   color: orange;
   margin-bottom: 10px;
 }
@@ -136,7 +149,7 @@ margin-top:0;
 .login-welcome-text {
   text-align: center;
   margin-bottom: 20px;
-  font-weight: bold;
+  font-weight: normal;
 }
 
   .login-welcome-text span {
@@ -147,5 +160,4 @@ margin-top:0;
 .login-footer {
   text-align: center;
   font-size: 12px;
-  margin-top: -40px;
 }
