--- a/IDServerandASPIdentity/Views/Account/Login.cshtml
+++ b/IDServerandASPIdentity/Views/Account/Login.cshtml
@@ -9,84 +9,97 @@
         </div>
         <div class="login-welcome-text">
             Welcome to eWorkplace Apps <br>
-            <span>Publisher Portal</span>
+            @if (Model.ClientId == "pub-app")
+            {
+                <span>Publisher Portal</span>}
+            @if (Model.ClientId == "biz-app")
+            {
+                <span>Business Portal</span>}
+            @if (Model.ClientId == "part-app")
+            {
+                <span>Partner Portal</span>
+            }
+            @if (Model.ClientId == "")
+            {
+                <span>Identity Server Ewapps</span>
+            }
         </div>
         @if (Model.EnableLocalLogin)
-    {
-        <div class="login-form">
-            <form asp-route="Login">
-                <input type="hidden" asp-for="ReturnUrl" />
-                <div class="form-group">
-                    <div class="input-group">
-                        <div class="input-group-addon"><i class="glyphicon glyphicon-user"></i></div>
-                        <input type="text" class="form-control" placeholder="Username" asp-for="Username" autofocus>
+        {
+            <div class="login-form">
+                <form asp-route="Login">
+                    <input type="hidden" asp-for="ReturnUrl" />
+                    <div class="form-group">
+                        <div class="input-group">
+                            <div class="input-group-addon"><i class="glyphicon glyphicon-user"></i></div>
+                            <input type="text" class="form-control" placeholder="Username" asp-for="Username" autofocus>
+                        </div>
                     </div>
-                </div>
-                <div class="form-group">
-                    <div class="input-group">
-                        <div class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></div>
-                        <input type="password" class="form-control" placeholder="Password" asp-for="Password" autocomplete="off">
+                    <div class="form-group">
+                        <div class="input-group">
+                            <div class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></div>
+                            <input type="password" class="form-control" placeholder="Password" asp-for="Password" autocomplete="off">
+                        </div>
                     </div>
-                </div>
-                <div class="form-group">
-                    <p>
-                        <a asp-controller="User"
-                           asp-action="ForgotPassword" asp-route-tenantId="0000-0000-0000" asp-route-returnUrl="@Model.ReturnUrl">Forgot Your Password?</a>
-                    </p>
-                </div>
-                @*@if (Model.AllowRememberLogin)
-            {
-                <div class="form-group login-remember">
-                    <label asp-for="RememberLogin">
-                        <input asp-for="RememberLogin">
-                        <strong>Remember My Login</strong>
-                    </label>
-                </div>
-        }*@
-                <div class="form-group text-center">
-                    <button class="btn btn-primary" name="button" value="login">Login</button>
-                    <button class="btn btn-default" name="button" value="cancel">Cancel</button>
-                </div>
-                <div class="login-footer">
-                    Copyright © 2018 eWorkplace Apps. All Rights Reserved.
-                </div>
+                    <div class="form-group">
+                        <p>
+                            <a asp-controller="User"
+                               asp-action="ForgotPassword" asp-route-tenantId="0000-0000-0000" asp-route-returnUrl="@Model.ReturnUrl">Forgot Your Password?</a>
+                        </p>
+                    </div>
+                    @*@if (Model.AllowRememberLogin)
+                            {
+                                <div class="form-group login-remember">
+                                    <label asp-for="RememberLogin">
+                                        <input asp-for="RememberLogin">
+                                        <strong>Remember My Login</strong>
+                                    </label>
+                                </div>
+                        }*@
+                    <div class="form-group text-center">
+                        <button class="btn btn-primary" name="button" value="login">Login</button>
 
-            </form>
+                    </div>
+                    <div class="login-footer">
+                        Copyright © 2018 eWorkplace Apps. All Rights Reserved.
+                    </div>
 
-        </div>
-        
-}
+                </form>
+
+            </div>
+
+        }
         @if (Model.VisibleExternalProviders.Any())
-    {
-        <div class="col-md-6 col-sm-6 external-providers">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">External Login</h3>
-                </div>
-                <div class="panel-body">
-                    <ul class="list-inline">
-                        @foreach (var provider in Model.VisibleExternalProviders)
-                    {
-                        <li>
-                            <a class="btn btn-default"
-                               asp-action="ExternalLogin"
-                               asp-route-provider="@provider.AuthenticationScheme"
-                               asp-route-returnUrl="@Model.ReturnUrl">
-                                @provider.DisplayName
-                            </a>
-                        </li>
-                }
-                    </ul>
+        {
+            <div class="col-md-6 col-sm-6 external-providers">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">External Login</h3>
+                    </div>
+                    <div class="panel-body">
+                        <ul class="list-inline">
+                            @foreach (var provider in Model.VisibleExternalProviders)
+                            {
+                                <li>
+                                    <a class="btn btn-default"
+                                       asp-action="ExternalLogin"
+                                       asp-route-provider="@provider.AuthenticationScheme"
+                                       asp-route-returnUrl="@Model.ReturnUrl">
+                                        @provider.DisplayName
+                                    </a>
+                                </li>
+                            }
+                        </ul>
+                    </div>
                 </div>
             </div>
-        </div>
-}
+        }
         @if (!Model.EnableLocalLogin && !Model.VisibleExternalProviders.Any())
-    {
-        <div class="alert alert-warning">
-            <strong>Invalid login request</strong>
-            There are no login schemes configured for this client.
-        </div>
-}
+        {
+            <div class="alert alert-warning">
+                <strong>Invalid login request</strong>
+                There are no login schemes configured for this client.
+            </div>
+        }
     </section>
 </div>
