--- a/IDServerandASPIdentity/Views/Shared/_Layout.cshtml
+++ b/IDServerandASPIdentity/Views/Shared/_Layout.cshtml
@@ -12,14 +12,14 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>IdentityServer4</title>
+    <title>IdentityServer-EwApps</title>
     <link rel="icon" type="image/x-icon" href="~/favicon.ico" />
     <link rel="shortcut icon" type="image/x-icon" href="~/favicon.ico" />
     <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
-    <div class="wrapper">
+  <!--  <div class="wrapper">
         <div class="navbar navbar-inverse navbar-fixed-top">
             <div class="container-fluid">
                 <div class="navbar-header">
@@ -48,7 +48,7 @@
                 </ul>
         }
             </div>
-        </div>
+        </div>-->
         <div class="container body-content height100p">
             @RenderBody()
         </div>
