--- a/IDServerandASPIdentity/Views/Account/LoggedOut.cshtml
+++ b/IDServerandASPIdentity/Views/Account/LoggedOut.cshtml
@@ -9,14 +9,16 @@
     <!--<h1>
         Logout
         <small>You are now logged out</small>
-    </h1>
+    </h1>-->
     @if (Model.PostLogoutRedirectUri != null)
     {
-        <div>
-            Click <a class="PostLogoutRedirectUri" href="@Model.PostLogoutRedirectUri">here</a> to return to the
-            <span>@Model.ClientName</span> application.
-        </div>
-    }-->
+        <!-- <div>
+              Click <a class="PostLogoutRedirectUri" href="@Model.PostLogoutRedirectUri">here</a> to return to the
+              <span>@Model.ClientName</span> application.
+          </div>-->
+        <a class="PostLogoutRedirectUri" href="@Model.PostLogoutRedirectUri"></a>
+
+    }
     @if (Model.SignOutIframeUrl != null)
     {
         <iframe width="0" height="0" class="signout" src="@Model.SignOutIframeUrl"></iframe>
