--- a/IDServerandASPIdentity/Views/Account/Login.cshtml
+++ b/IDServerandASPIdentity/Views/Account/Login.cshtml
@@ -29,6 +29,7 @@
             <div class="login-form">
                 <form asp-route="Login">
                     <input type="hidden" asp-for="ReturnUrl" />
+                    <input type="hidden" asp-for="ClientId" />
                     <div class="form-group">
                         <div class="input-group">
                             <div class="input-group-addon"><i class="glyphicon glyphicon-user"></i></div>
@@ -48,14 +49,14 @@
                         </p>
                     </div>
                     @*@if (Model.AllowRememberLogin)
-                            {
-                                <div class="form-group login-remember">
-                                    <label asp-for="RememberLogin">
-                                        <input asp-for="RememberLogin">
-                                        <strong>Remember My Login</strong>
-                                    </label>
-                                </div>
-                        }*@
+            {
+                <div class="form-group login-remember">
+                    <label asp-for="RememberLogin">
+                        <input asp-for="RememberLogin">
+                        <strong>Remember My Login</strong>
+                    </label>
+                </div>
+        }*@
                     <div class="form-group text-center">
                         <button class="btn btn-primary" name="button" value="login">Login</button>
 
