add user chnages

--- a/IDServerandASPIdentity/Views/User/SetPassword.cshtml
+++ b/IDServerandASPIdentity/Views/User/SetPassword.cshtml
@@ -7,10 +7,12 @@
 <h4>Set your password.</h4>
 <hr />
 <div class="row">
+    
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
-            <!--<input asp-for="Code" type="hidden" />-->
+            <input asp-for="Code" type="hidden" />
+            <input asp-for="RedirectUrl" type="hidden" />
             <div class="form-group">
                 <label asp-for="Email"></label>
                 <input asp-for="Email" class="form-control" />
