--- a/IDServerandASPIdentity/Views/User/SetPassword.cshtml
+++ b/IDServerandASPIdentity/Views/User/SetPassword.cshtml
@@ -3,34 +3,80 @@
     ViewData["Title"] = "Set password";
 }
 
-<h2>@ViewData["Title"]</h2>
+@*<h2>@ViewData["Title"]</h2>
 <h4>Set your password.</h4>
-<hr />
-<div class="row">
-    
-    <div class="col-md-4">
+<hr />*@
+<div class="login-page set-pass-page">
+    <section class="login-section">
         <form method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <input asp-for="Code" type="hidden" />
-            <input asp-for="RedirectUrl" type="hidden" />
-            <div class="form-group">
-                <label asp-for="Email"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
+            <div class="login-logo">
+                <div asp-validation-summary="All" class="text-danger"></div>
+                <img src="~/images/logo.png" />
             </div>
-            <div class="form-group">
-                <label asp-for="NewPassword"></label>
-                <input asp-for="NewPassword" class="form-control" />
-                <span asp-validation-for="NewPassword" class="text-danger"></span>
+            <div class="login-welcome-text">
+                Welcome to eWorkplace Apps <br>
+                Customer Portal - iPayment
             </div>
-            <div class="form-group">
-                <label asp-for="ConfirmPassword"></label>
-                <input asp-for="ConfirmPassword" class="form-control" />
-                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+            <div class="login-form">
+                <div class="form-group set-before-group">
+                    <input asp-for="Code" type="hidden" />
+                    <input asp-for="RedirectUrl" type="hidden" />
+                    <div class="input-group">
+                        <div class="input-group-addon"><i class="glyphicon glyphicon-user"></i></div>
+                        <input asp-for="Email" class="form-control" placeholder="Email" />
+                        <span asp-validation-for="Email" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="set-pass-label">
+                    Set Password
+                </div>
+                <div class="form-group">
+                    <div class="input-group">
+                        <div class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></div>
+                        <input asp-for="NewPassword" class="form-control" placeholder="Enter your password" />
+                        <span asp-validation-for="NewPassword" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="input-group">
+                        <div class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></div>
+                        <input asp-for="ConfirmPassword" class="form-control" placeholder="Re-Enter your password" />
+                        <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="form-group text-center">
+                    <button class="btn btn-primary" value="submit">Sign In</button>
+                </div>
+                <div class="login-footer">
+                    Copyright © 2018 eWorkplace Apps. All Rights Reserved.
+                </div>
+
             </div>
-            <button type="submit" class="btn btn-default">Set</button>
         </form>
-    </div>
+    </section>
 </div>
+    @*<div class="row">
+        <div class="col-md-4">
+            <form method="post">
+                <div asp-validation-summary="All" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="Email"></label>
+                    <input asp-for="Email" class="form-control" />
+                    <span asp-validation-for="Email" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="NewPassword"></label>
+                    <input asp-for="NewPassword" class="form-control" />
+                    <span asp-validation-for="NewPassword" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="ConfirmPassword"></label>
+                    <input asp-for="ConfirmPassword" class="form-control" />
+                    <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                </div>
+                <button type="submit" class="btn btn-default">Set</button>
+            </form>
+        </div>
+    </div>*@
 
 
