--- a/IDServerandASPIdentity/Views/Shared/_Layout.cshtml
+++ b/IDServerandASPIdentity/Views/Shared/_Layout.cshtml
@@ -19,44 +19,44 @@
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
-  <!--  <div class="wrapper">
-        <div class="navbar navbar-inverse navbar-fixed-top">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a href="~/">
-                        <span class="navbar-brand">
-                            <img src="~/icon.png" class="icon-banner">
-                            IdentityServer4
-                        </span>
-                    </a>
-                </div>
-                @if (!string.IsNullOrWhiteSpace(name))
-            {
-                <ul class="nav navbar-nav">
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">@name <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li><a asp-action="Logout" asp-controller="Account">Logout</a></li>
-                        </ul>
-                    </li>
-                </ul>
-        }
-            </div>
-        </div>-->
-        <div class="container body-content height100p">
-            @RenderBody()
-        </div>
-        
+    <!--  <div class="wrapper">
+          <div class="navbar navbar-inverse navbar-fixed-top">
+              <div class="container-fluid">
+                  <div class="navbar-header">
+                      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                          <span class="sr-only">Toggle navigation</span>
+                          <span class="icon-bar"></span>
+                          <span class="icon-bar"></span>
+                          <span class="icon-bar"></span>
+                      </button>
+                      <a href="~/">
+                          <span class="navbar-brand">
+                              <img src="~/icon.png" class="icon-banner">
+                              IdentityServer4
+                          </span>
+                      </a>
+                  </div>
+                  @if (!string.IsNullOrWhiteSpace(name))
+              {
+                  <ul class="nav navbar-nav">
+                      <li class="dropdown">
+                          <a href="#" class="dropdown-toggle" data-toggle="dropdown">@name <b class="caret"></b></a>
+                          <ul class="dropdown-menu">
+                              <li><a asp-action="Logout" asp-controller="Account">Logout</a></li>
+                          </ul>
+                      </li>
+                  </ul>
+          }
+              </div>
+          </div>-->
+    <div class="container body-content height100p">
+        @RenderBody()
     </div>
-    
+
+    <!--</div>-->
+
     <script src="~/lib/jquery/jquery.js"></script>
     <script src="~/lib/bootstrap/js/bootstrap.js"></script>
     @RenderSection("scripts", required: false)
 </body>
-</html>
+    </html>
