--- a/IDServerandASPIdentity/Views/User/ForgotPassword.cshtml
+++ b/IDServerandASPIdentity/Views/User/ForgotPassword.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Forgot password";
 }
 
-<hr />
+@*<hr />
 
 <hr />
 <h2>@ViewData["Title"]</h2>
@@ -16,13 +16,44 @@
             <input type="hidden" asp-for="ReturnUrl" />
             <input type="hidden" asp-for="TenantId" />
             <div asp-validation-summary="All" class="text-danger"></div>
-            <!--<input asp-for="Code" type="hidden" />-->
             <div class="form-group">
                 <label asp-for="Email"></label>
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <button type="submit" class="btn btn-default">Send Link</button>
+        </form>
+    </div>
+</div>*@
+
+<div class="modal-dialog" role="document">
+    <div class="modal-content">
+        <form method="post">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">@ViewData["Title"]</h4>
+            </div>
+            <div class="modal-body ">
+                <div class="form-horizontal ">
+                    <input type="hidden" asp-for="ReturnUrl" />
+                    <input type="hidden" asp-for="TenantId" />
+                    <div asp-validation-summary="All" class="text-danger"></div>
+                    <p class="text-center">Please enter your email address to reset password. We will send you a link shortly.</p>
+                    <div class="form-group">
+                        <div class="col-md-12">
+                            <label asp-for="Email" class="col-md-2 control-label"></label>
+                            <div class="col-md-10">
+                                <input type="text" asp-for="Email" class="form-control" placeholder="Email">
+                                <span asp-validation-for="Email" class="text-danger"></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer text-center">
+                <button type="submit" class="btn btn-primary">Send</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+            </div>
         </form>
     </div>
 </div>
