--- a/IDServerandASPIdentity/Views/Shared/_ForgotPassword.cshtml
+++ b/IDServerandASPIdentity/Views/Shared/_ForgotPassword.cshtml
@@ -1,25 +1,77 @@
-﻿<div class="modal-dialog" role="document">
+﻿@model ForgotPasswordViewModel
+
+<div class="modal-dialog" role="document">
     <div class="modal-content">
-        <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title">Forgot your password?</h4>
-        </div>
-        <div class="modal-body ">
-            <div class="form-horizontal ">
-                <p class="text-center">Please enter your email address to reset password. We will send you a link shortly.</p>
-                <div class="form-group">
-                    <div class="col-md-12">
-                        <label for="Email" class="col-md-2 control-label">Email</label>
-                        <div class="col-md-10">
-                            <input type="text" class="form-control" id="Email" placeholder="Email">
+        
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">Forgot your password?</h4>
+            </div>
+            <div style="display:none" id="successMsg">
+                <label>Email will be sent to the user with Code to Reset password.</label>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+            </div>
+
+            <div style="display:block" class="modal-body id="formDiv">
+
+                <div class="form-horizontal ">
+                    <p class="text-center">Please enter your email address to reset password. We will send you a link shortly.</p>
+                    <div class="form-group">
+                        <div class="col-md-12">
+                            <label for="Email" class="col-md-2 control-label">Email</label>
+                            <div class="col-md-10">
+                                <!--<input type="text" class="form-control" id="Email" placeholder="Email">-->
+                                <input type="text" class="form-control" placeholder="Email" asp-for="Email" autofocus>
+                            </div>
+                        </div>
+                        <div class="alert alert-warning">
+                            <label id="Error"></label>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="modal-footer text-center">
-            <button type="button" class="btn btn-primary">Send</button>
-            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-        </div>
+            <div class="modal-footer text-center">
+                <button id="btnsave" type="button" class="btn btn-primary">Send</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+            </div>
+       
     </div>
 </div>
+
+@section scripts {
+    <script type="text/javascript">
+
+        window.jQuery(document).ready(function () {
+            $("#btnsave").on('click', function () {
+
+
+                var frm = $("form");
+                var data = new FormData($("form")[0]);
+                debugger;
+                $.ajax({
+                    url: '/User/ForgotPasswordPartial',
+                    type: "POST",
+                    processData: false,
+                    data: data,
+                    dataType: 'json',
+                    contentType: false,
+                    success: function (response) {
+                        if (response == "EmailNotFound" || response == "Done") {
+                            $("#successMsg").show();
+                            $("#formDiv").hide();
+                        };
+                    },
+                    error: function (er) {
+
+                        $("#successMsg").hide();
+                        $("#formDiv").show();
+                        $("#Error").val("Some Error has occured");
+                    }
+                });
+                return false;
+            });
+
+        });
+    </script>
+    }
+
